--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="error">
       
       <div class="left">
-        <h1>看看这里啊，看看这啊</h1>
+        <h1 style="color:#fff;">看看这里啊，看看这啊</h1>
         <div class="title" id="s1">页面加载失败</div>
         <span id="s2">别紧张,立即刷新页面</span>
         <a id="s3">点击刷新</a>
